# MIPT-networked

./: .clang-format  .gitignore
w2/: CMakeLists.txt  bitstream.cpp  bitstream.h  client.cpp  codes.h  lobby.cpp  server.cpp
w4/: CMakeLists.txt  bitstream.cpp  bitstream.h  bitstream_test.cpp  entity.h  main.cpp  net_bitstream.cpp  net_bitstream.h  protocol.cpp  protocol.h  server.cpp
w5/: CMakeLists.txt  bitstream.cpp  bitstream.h  client_entity.cpp  client_entity.h  constants.h  entity.cpp  entity.h  main.cpp  net_bitstream.cpp  net_bitstream.h  protocol.cpp  protocol.h  server.cpp  snapshot.h
